# DashPlotly_um_reconhecimento

./: README.md  pyproject.toml
dashplotly_um_reconhecimento/: Dash_Yfinance.ipynb
