[tool.poetry]
name = "dashplotly-um-reconhecimento"
version = "0.1.0"
description = ""
authors = ["bruno <b_linhares@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash-bootstrap-components = "^1.6.0"
dash = "^2.17.0"
yfinance = "^0.2.40"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
